<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eatyourbeetsvg</groupId>
    <artifactId>eatyourbeetsvg</artifactId>
    <version>v1.0.0</version>
    <packaging>jar</packaging>

    <name>EatYourBeetS-VG STS MOD</name>
    <description>Mod including a new custom character: The Animator</description>

    <dependencies>
        <dependency>
            <groupId>com.megacrit.cardcrawl</groupId>
            <artifactId>slaythespire</artifactId>
            <version>051</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/desktop-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>basemod</groupId>
            <artifactId>basemod</artifactId>
            <version>5.12.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/BaseMod.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>ModTheSpire</artifactId>
            <version>3.6.3</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/ModTheSpire.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>stslib</artifactId>
            <version>1.14.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/STSLib.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <finalName>TheAnimator</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <copy file="target/TheAnimator.jar" tofile="D:\SteamLibrary\steamapps\common\SlayTheSpire\mods\TheAnimator.jar"/>
                                <copy file="target/TheAnimator.jar" tofile="D:\SteamLibrary\steamapps\common\SlayTheSpire\TheAnimator\content\TheAnimator.jar"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/_cards.psd</exclude>
                    <exclude>**/temp/*</exclude>
                </excludes>
            </resource>
        </resources>
    </build>
</project>